Production/Platform_V2/auth_v2/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-v2-service
  namespace: terrestrialplatform-v2
spec:
  selector:
    app: auth-v2-app
  ports:
    - protocol: "TCP"
      port: 8011
      targetPort: 8080
  type: ClusterIP
