Production/Platform_V2/auth_v2/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-v2-ingress
  namespace: terrestrialplatform-v2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: platform.tpcloud.tech
      http:
        paths:
          - path: /auth/(.*)
            pathType: Prefix

            backend:

              service:

                name: auth-v2-service

                port:

                  number: 8011
